lesson 9 (second check) 07.07.23